# CNN_NEWS

./: .gitignore  QWEN.md  README.md  news.sh  news_scraper.py  plan.md  pyproject.toml  run_scraper.py  test_imports.py
.specify/memory/: constitution.md
specs/001-news-scraper/: data-model.md  quickstart.md  research.md  spec.md  tasks.md  test_data_integrity_example.py
specs/001-news-scraper/checklists/: requirements.md
specs/001-news-scraper/contracts/: api-contracts.md
specs/002-news-scraper-update/: analysis.md  data-model.md  final-verification.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-news-scraper-update/checklists/: contracts.md  cross-artifact-analysis.md  data-model.md  integration-analysis.md  modularity.md  performance-reliability.md  plan.md  quality-assurance.md  quickstart.md  requirements.md  research.md  (+3 more)
src/: cnbc_parser.py  cnn_parser.py  deduplication.py  main.py  output_writer.py  scraper.py
src/config/: __init__.py  loader.py
src/models/: article.py  error.py  metrics.py  output.py  output_file.py  result.py  source.py
src/utils/: cache.py  date_filter.py  date_parser.py  deduplication.py  error_handler.py  helpers.py  logger.py  performance_optimizer.py  rate_limiter.py  validator.py
tests/integration/: test_end_to_end.py
tests/unit/: test_cnbc_parser.py  test_cnn_parser.py  test_data_integrity.py  test_data_validator.py  test_date_filter.py  test_date_parser.py  test_deduplication.py  test_error_handler.py  test_logger.py  test_output_writer.py  test_performance_optimizer.py  test_rate_limiter.py
(+1 files in other folders)
